# compute-graphics-from-scratch

./: .gitignore  CMakeLists.txt  gen_and_build.sh
raytracer/: CMakeLists.txt
raytracer/01_Basic_Raytracer/: CMakeLists.txt  main.cpp
raytracer/01_Basic_Raytracer/include/: Camera.h  IObject.h  Image.h  Ray.h  Scene.h  Sphere.h  Vector.h
raytracer/01_Basic_Raytracer/src/: Camera.cpp  Image.cpp  Scene.cpp  Sphere.cpp  main.cpp
